--- a/src/DDNSSharp/DDNSSharp.csproj
+++ b/src/DDNSSharp/DDNSSharp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
