--- a/src/DDNSSharp/Properties/launchSettings.json
+++ b/src/DDNSSharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DDNSSharp": {
       "commandName": "Project",
-      "commandLineArgs": "provider set aliyun --id x666 --secret abc"
+      "commandLineArgs": " provider set --help"
     }
   }
 }
