Implement get provider config value.

--- a/src/DDNSSharp/Properties/launchSettings.json
+++ b/src/DDNSSharp/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "DDNSSharp": {
-      "commandName": "Project",
-      "commandLineArgs": "provider set aliyun --id x666 --secret abc"
+      "commandName": "Project"
     }
   }
 }
