--- a/src/DDNSSharp/DDNSSharp.csproj
+++ b/src/DDNSSharp/DDNSSharp.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Version>0.0.1</Version>
+    <AssemblyName>ddnssharp</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
