chore: 应该是 McMaster.Extensions.CommandLineUtils 的问题，例如传入参数 `add   --interface fff  --secret sss --id xxid  --provider aliyun   a.com` （把 argument 放在最后）会导致 `Domain` 等 argument 获取到错误的值。但把 argument 放在 `add` 的后面、options 的前面则没有这样的问题。 现在干脆考虑把 `add` 命令放到 program.cs 文件下，然后在那里直接反射 provider 并动态注册 options 吧。

--- a/src/DDNSSharp/Properties/launchSettings.json
+++ b/src/DDNSSharp/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "DDNSSharp": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "add   --interface fff  --secret sss --id xxid  --provider aliyun   a.com"
     }
   }
 }
