feat: 移除 `provider` 命令，从本版本起，提供商不再单独配置，与提供商有关的信息在 `add` 命令中通过参数提供。

--- a/src/DDNSSharp/Properties/launchSettings.json
+++ b/src/DDNSSharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DDNSSharp": {
       "commandName": "Project",
-      "commandLineArgs": "add   --interface fff  --secret sss --id xxid  --provider aliyun   a.com"
+      "commandLineArgs": "add --interface 以太网 --ali-secret sss --ali-access-key-id xxid  --provider aliyun   a.com"
     }
   }
 }
