--- a/src/DDNSSharp/DDNSSharp.csproj
+++ b/src/DDNSSharp/DDNSSharp.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="aliyun-net-sdk-alidns" Version="2.0.19" />
+    <PackageReference Include="ConsoleTables" Version="2.4.2" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
