--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,7 +242,7 @@ jobs:
       # 谁来创建 release 并不重要，如果 release 已经存在，那就跳过它
       - name: Create GitHub release by ${{ matrix.os }}
         continue-on-error: true
-        id: github_release
+        id: create_release
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
         uses: actions/create-release@v1
         env:
@@ -267,7 +267,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          # 因为不确定 release 在哪个任务里被创建，所以不能使用 ${{ steps.github_release.outputs.upload_url }}
+          # 因为不确定 release 在哪个任务里被创建，所以不能使用 ${{ steps.create_release.outputs.upload_url }}
           # 改为直接硬编码 URL，下同
           upload_url: ${{ env.UPLOAD_URL }}
           asset_path: ./ddnssharp_${{ env.APPLICATION_VERSION }}_windows_x86.zip
@@ -350,3 +350,9 @@ jobs:
           asset_path: ./ddnssharp_${{ env.APPLICATION_VERSION }}_macos_x64.zip
           asset_name: ddnssharp_${{ env.APPLICATION_VERSION }}_macos_x64.zip
           asset_content_type: application/zip
+
+      - name: Update official website ddnssharp.bun.dev
+        if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && steps.create_release.outputs != null }}
+        shell: pwsh
+        run: |
+          $response = Invoke-WebRequest -URI 'https://api.github.com/repos/huhubun/ddnssharp.bun.dev-source/actions/workflows/deploy.yml/dispatches' -Method 'POST' -Authentication OAuth -Token (ConvertTo-SecureString "${{ secrets.DISPATCH_ACTION_TOKEN }}" -AsPlainText -Force)
