--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -351,8 +351,9 @@ jobs:
           asset_name: ddnssharp_${{ env.APPLICATION_VERSION }}_macos_x64.zip
           asset_content_type: application/zip
 
-      - name: Update official website ddnssharp.bun.dev
+      - name: Update official website
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && steps.create_release.outputs != null }}
         shell: pwsh
         run: |
-          $response = Invoke-WebRequest -URI 'https://api.github.com/repos/huhubun/ddnssharp.bun.dev-source/actions/workflows/deploy.yml/dispatches' -Method 'POST' -Authentication OAuth -Token (ConvertTo-SecureString "${{ secrets.DISPATCH_ACTION_TOKEN }}" -AsPlainText -Force)
+          $body = @{ ref = "master" }
+          $response = Invoke-WebRequest -URI 'https://api.github.com/repos/huhubun/ddnssharp.bun.dev-source/actions/workflows/deploy.yml/dispatches' -Method 'POST' -Authentication OAuth -Token (ConvertTo-SecureString "${{ secrets.DISPATCH_ACTION_TOKEN }}" -AsPlainText -Force) -Body $body
